@@ -1,4 +1,4 @@
-/* $NetBSD: pscan.h,v 1.2 2007/06/25 21:38:46 joerg Exp $ */
+/* $NetBSD: pscan.h,v 1.3 2012/11/23 12:13:35 joerg Exp $ */
 
 /*-
  * Copyright (c) 2007 Joerg Sonnenberger <joerg@NetBSD.org>.
@@ -48,6 +48,7 @@ struct scan_job {
 };
 
 extern int	 verbosity;
+extern const char *pkgsrc_tree;
 
 char		*scan_pkglocation(const char *);
 
@@ -60,3 +61,4 @@ struct scan_job	*get_job(void);
 void		 process_job(struct scan_job *, enum job_state);
 void		 write_jobs(const char *);
 
+void		read_old_scan(const char *);
