@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2012,v 1.3613 2012/11/23 08:48:33 he Exp $
+$NetBSD: CHANGES-2012,v 1.3614 2012/11/23 12:13:34 joerg Exp $
 
 Changes to the packages collection and infrastructure in 2012:
 
@@ -5541,3 +5541,5 @@ Changes to the packages collection and infrastructure in 2012:
 	Updated mail/thunderbird to 17.0 [ryoon 2012-11-23]
 	Updated mail/thunderbird-l10n to 17.0 [ryoon 2012-11-23]
 	Updated lang/parrot to 4.8.0 [he 2012-11-23]
+	Updated pkgtools/pbulk-base to 0.46 [joerg 2012-11-22]
+	Updated pkgtools/pbulk to 0.51 [joerg 2012-11-22]
